--- a/Projeto-Crud/css/lista_style.css
+++ b/Projeto-Crud/css/lista_style.css
@@ -4,7 +4,7 @@
     border:none!important;
     background-color: rgb(36, 36, 128)!important;
   }
-.container-{
+.container{
     display: flex;
     flex-direction: column;
     align-items: center;
